--- a/styles/scss/_order.scss
+++ b/styles/scss/_order.scss
@@ -79,7 +79,7 @@
             }
         }
     }
-    &__descr {
+    &__description {
         font-family: 'Lato', sans-serif;
         font-weight: 400;
         font-size: 16px;
